--- a/skypepi/ViewerJS/index.html
+++ b/skypepi/ViewerJS/index.html
@@ -66,7 +66,7 @@ limitations under the License.
     <body>
         <div id = "viewer">
             <div id = "titlebar">
-                <!-- <div id = "documentName"></div> -->
+                <div id = "documentName"></div>
                 <div id = "toolbarRight">
                     <button id = "presentation" class = "toolbarButton presentation" title = "Presentation"></button>
                     <button id = "fullscreen" class = "toolbarButton fullscreen" title = "Fullscreen"></button>
