viewer js index

--- a/skypepi/ViewerJS/index.html
+++ b/skypepi/ViewerJS/index.html
@@ -58,6 +58,7 @@ limitations under the License.
         <link rel="stylesheet" type="text/css" href="viewer.css" media="screen"/>
         <script src="viewer.js" type="text/javascript" charset="utf-8"></script>
         <script src="PluginLoader.js" type="text/javascript" charset="utf-8"></script>
+        <script src="compatibility.js" type="text/javascript" charset="utf-8"></script>
         <script>
             loadDocument(window.location.hash);
         </script>
