--- a/skypepi/ViewerJS/index.html
+++ b/skypepi/ViewerJS/index.html
@@ -65,7 +65,7 @@ limitations under the License.
     </head>
 
     <body>
-        <div id = "viewer">
+        <div id="viewer" style="height:560px;">
             <div id = "titlebar">
                 <div id = "documentName"></div>
                 <div id = "toolbarRight">
